--- a/prep_data.ipynb
+++ b/prep_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "590e72df",
    "metadata": {},
    "outputs": [],
@@ -897,6 +897,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7e207b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtype = np.float64\n",
+    "intron_file = \"/mnt/lareaulab/reliscu/data/GENCODE/GRCh38/psix_annotation/intron_file.tab.gz\"\n",
+    "intron_table = read_intron_file(intron_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cf8ae4e8",
    "metadata": {},
    "outputs": [],
@@ -936,18 +948,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtype = np.float64\n",
-    "intron_file = \"/mnt/lareaulab/reliscu/data/GENCODE/GRCm39/psix_annotation/intron_file.tab.gz\"\n",
-    "intron_table = read_intron_file(intron_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85baa244",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "intron_table['intron'] = intron_table['intron'].astype(str)\n",
     "\n",
     "sj_table = pd.merge(intron_table, expr_sj, # Subset to SJs in annotated intron table\n",
@@ -955,7 +955,7 @@
     "                    right_index=True).fillna(0)\n",
     "sj_table.shape\n",
     "# >>> sj_table.shape\n",
-    "# (157406, 19790)"
+    "# (233295, 19789)"
    ]
   },
   {
@@ -965,7 +965,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sj_table_FCX = sj_table.loc[:, sampleinfo_FCX['SAMPID']]"
+    "sj_table_FCX = sj_table.loc[:, sampleinfo_FCX['SAMPID']]\n",
+    "# >>> sj_table_FCX.shape\n",
+    "# (233295, 269)"
    ]
   },
   {
